tests/js/invalid/list/append-2.buri
item = [0, 1, 2, 3, 4]:append(1, 2)